-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 8u231, jfx15
-
Component/s: javafx
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8242676 | jfx14 | Arun Joseph | P2 | Resolved | Fixed | |
| JDK-8241180 | jfx11.0.7 | Arun Joseph | P2 | Resolved | Fixed | |
| JDK-8239518 | 8u261 | Arun Joseph | P2 | Resolved | Fixed | b01 |
| JDK-8239862 | 8u251 | Arun Joseph | P2 | Closed | Fixed | b06 |
Invalid opcode returned in LLIntData in CLoop interpreter (used only in 32 bit version build) leads to un-expected behaviour (Crash).
Crash encounted while loading some popular sites (i.g., yahoo.com with location / network proxy set to US only) + javascript execution mode in CLOOP (JIT disabled) on 32-bit build only.
Crash encounted while loading some popular sites (i.g., yahoo.com with location / network proxy set to US only) + javascript execution mode in CLOOP (JIT disabled) on 32-bit build only.
- backported by
-
JDK-8239518 LLIntData : invalid opcode returned for 16 and 32 bit wide instructions
-
- Resolved
-
-
JDK-8241180 LLIntData : invalid opcode returned for 16 and 32 bit wide instructions
-
- Resolved
-
-
JDK-8242676 LLIntData : invalid opcode returned for 16 and 32 bit wide instructions
-
- Resolved
-
-
JDK-8239862 LLIntData : invalid opcode returned for 16 and 32 bit wide instructions
-
- Closed
-
(1 links to)