8239454: LLIntData : invalid opcode returned for 16 and 32 bit wide instructions

Reviewed-by: ghb, kcr