modules/javafx.web/src/main/native/Source/JavaScriptCore/llint/LLIntData.h
@@ -105,7 +105,7 @@ inline Opcode getOpcodeWide16(OpcodeID id)
 #if ENABLE(COMPUTED_GOTO_OPCODES)
     return g_opcodeMapWide16[id];
 #else
-    return static_cast<Opcode>(id - numOpcodeIDs);
+    return static_cast<Opcode>(id + numOpcodeIDs);
 #endif
 }
 
@@ -114,7 +114,7 @@ inline Opcode getOpcodeWide32(OpcodeID id)
 #if ENABLE(COMPUTED_GOTO_OPCODES)
     return g_opcodeMapWide32[id];
 #else
-    return static_cast<Opcode>(id - numOpcodeIDs);
+    return static_cast<Opcode>(id + numOpcodeIDs*2);
 #endif
 }
 
